--- a/css/style.css
+++ b/css/style.css
@@ -42,21 +42,45 @@ a {
 /* Стилизация header =========================
 ===================== */
 
+.main-header {
+    width: 100%;
+    padding-top: 49px;
+
+    background-color: #eeeeee;
+}
+
+.container {
+    width: 1200px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
 .main-navigation {
+    display: flex;
+    justify-content: space-between;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 30px;
     color: #000000;
 
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
 }
 
 .navigation-list {
+    width: 560px;
+    margin: 0;
+    padding: 0;
+
     list-style: none;
 }
 
 .navigation-list a {
     color: #000000;
+}
+
+.main-basket {
+    width: 160px;
 }
 
 .main-basket a {
@@ -81,6 +105,10 @@ a {
     border-bottom: 2px solid #fb565a;
 }
 
+.main-header-logo {
+    width: 160px;
+}
+
 .main-header-logo:hover,
 .main-header-logo:focus {
     opacity: 0.8;
@@ -93,6 +121,7 @@ a {
 /* Стилизация main index ====================
 ======================== */
 .slider {
+    width: 100%;
     background-color: #eeeeee;
 }
 
@@ -107,6 +136,14 @@ a {
 ======================*/
 
 .services-list {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    margin-bottom: 75px;
+    padding: 0;
+    padding-bottom: 80px;
+
+    border-bottom: 2px solid #f4f4f4;
     list-style: none;
 }
 
@@ -117,6 +154,9 @@ a {
     color: #000000;
 }
 
+.services-item {
+    width: 300px;
+}
 /* .services-button-red {
 
 } */
@@ -151,6 +191,23 @@ a {
 
 /* Section = about_us ===============================
 ====================== */
+
+.about_us {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 54px;
+    margin-bottom: 46px;
+
+    border-bottom: 2px solid #f4f4f4;
+}
+
+.about-left-wrapper {
+    width: 660px;
+}
+
+.about-right-wrapper {
+    width: 360px;
+}
 
 .about_us p:first-of-type {
     font-weight: 500;
@@ -187,7 +244,19 @@ a {
 /* Section = partners =====================================
 ====================== */
 
+.partners-list {
+    display: flex;
+    margin: 0;
+    margin-bottom: 80px;
+    padding: 0;
+    padding-bottom: 44px;
+
+    border-bottom: 2px solid #f4f4f4;
+}
+
 .partners-item {
+    width: 260px;
+
     list-style: none;
 }
 
@@ -207,15 +276,36 @@ a {
 /* main catalog ============================================
 ================ */
 
+.heading-wrapper {
+    width: 100%;
+
+    background-color: #eeeeee;
+}
+
 .catalog-heading {
+    padding: 0;
+    padding-top: 80px;
+    padding-bottom: 100px;
+    margin: 0;
+    margin-bottom: 57px;
+
     font-weight: 500;
     font-size: 55px;
     line-height: 55px;
     color: #000000;
+    text-align: center;
 }
 
+.catalog-columns {
+    display: flex;
+    justify-content: space-between;
+}
 /* form filter =============================================
 =============== */
+
+.filters {
+    width: 260px;
+}
 
 .filter fieldset {
         border: 0;
@@ -286,14 +376,47 @@ input[type=number]{
 /* mocap catalog ===========================================
 ================= catalog sort */
 
+.catalog {
+    width: 760px;
+}
+
+.catalog-sort {
+    display: flex;
+    margin-bottom: 58px;
+}
+
 .catalog-sort span {
+    width: 160px;
+
     font-weight: 700;
     font-size: 18px;
     line-height: 18px;
     color: #000000;
+    text-transform: uppercase;
+}
+
+.catalog-sort-list {
+    display: flex;
+    width: 300px;
+}
+
+.catalog-sort-list li {
+    margin-right: 27px;
+}
+
+.catalog-sort-list li:last-child {
+    margin-right: 0;
+}
+
+.catalog-sort-btn {
+    display: flex;
+    width: 60px;
 }
 
 .catalog-sort ul {
+    padding: 0;
+    margin: 0;
+
     list-style: none;
 }
 
@@ -313,7 +436,18 @@ input[type=number]{
 ================ */
 
 .catalog-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 60px;
+
     list-style: none;
+}
+
+.catalog-item {
+    width: 360px;
 }
 
 .catalog-item-hover {
@@ -339,7 +473,16 @@ input[type=number]{
 ====================== */
 
 .pagination-list {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 60px;
+
     list-style: none;
+}
+
+.pagination-item {
+    margin-right: 11px;
 }
 
 .pagination-item a {
@@ -373,11 +516,25 @@ input[type=number]{
     color: #666666;
 }
 
+.social-wrapper {
+    display: flex;
+
+}
+
 .social {
+    width: 260px;
+    padding: 0;
+    margin: 0;
+    margin-right: 140px;
+
     list-style: none;
 }
 
 .call_to_action {
+    width: 560px;
+    padding: 0;
+    margin: 0;
+
     line-height: 22px;
 }
 
